--- a/AdminWeb/Areas/Admin/Views/User/Create.cshtml
+++ b/AdminWeb/Areas/Admin/Views/User/Create.cshtml
@@ -78,7 +78,7 @@
 								<option value="">-- Chọn vai trò --</option>
 								<option value="1">Quản trị (Admin)</option>     @* 1 = Admin *@
 								<option value="0">Người dùng (Customer)</option> @* 0 = Customer *@
-                  <option value="Shipper">Nhân viên giao hàng</option>
+                  @* <option value="Shipper">Nhân viên giao hàng</option> *@
 							</select>
 							<span asp-validation-for="Role" class="text-danger"></span>
 						</div>
