--- a/AdminWeb/Areas/Admin/Views/Shipping/Delete.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Shipping/Delete.cshtml
@@ -1,12 +1,12 @@
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model AdminWeb.Areas.Admin.Models.Shipping
+@* @model AdminWeb.Areas.Admin.Models.Shipping *@
 @{
-    ViewData["Title"] = "Xác nhận xóa Shipping";
-    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
+    // ViewData["Title"] = "Xác nhận xóa Shipping";
+    // Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
-<div class="row">
+@* <div class="row">
     <div class="col-lg-12">
         <div class="ibox">
             <div class="ibox-title">
@@ -64,10 +64,10 @@
                     </div>
                 </div>
 
-                <div class="hr-line-dashed"></div>
+                <div class="hr-line-dashed"></div> *@
 
                 @* Form để DELETE API *@
-                <form asp-action="Delete" method="post">
+@*                 <form asp-action="Delete" method="post">
                     <input asp-for="ShippingId" type="hidden" />
                     @Html.AntiForgeryToken()
 
@@ -84,10 +84,10 @@
         </div>
     </div>
 
-</div>
+</div> *@
 
 @section Scripts {
-    <script>
+    @* <script>
         console.log('🔧 Delete script loaded');
 
         // JavaScript để show loading khi submit
@@ -148,5 +148,5 @@
                 clearTimeout(deleteTimeout);
             }
         });
-    </script>
+    </script> *@
 }
