--- a/AdminWeb/Areas/Admin/Views/Shipping/Index.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Shipping/Index.cshtml
@@ -1,4 +1,4 @@
-@using AdminWeb.Areas.Admin.Models
+@* @using AdminWeb.Areas.Admin.Models
 @model PagedResponse<Shipping>
 
 @{
@@ -9,6 +9,34 @@
 
 <div class="col-lg-12">
     <div class="ibox-content">
+        <div class="ibox-title">
+            <h5><i class="fa fa-search"></i> Tìm kiếm thông tin vận chuyển</h5>
+        </div>
+
+        <div class="ibox-content">
+            <form asp-action="Index" method="get" class="form-inline mb-3">
+                <div class="form-group mr-2">
+                    <input type="text" name="recipientName" value="@ViewBag.RecipientName" class="form-control" placeholder="Tên người nhận" />
+                </div>
+                <div class="form-group mr-2">
+                    <input type="text" name="phoneNumber" value="@ViewBag.PhoneNumber" class="form-control" placeholder="Số điện thoại" />
+                </div>
+                <div class="form-group mr-2">
+                    <input type="text" name="address" value="@ViewBag.Address" class="form-control" placeholder="Địa chỉ" />
+                </div>
+                <div class="form-group mr-2">
+                    <input type="text" name="city" value="@ViewBag.City" class="form-control" placeholder="Thành phố" />
+                </div>
+                <div class="form-group mr-2">
+                    <input type="text" name="postalCode" value="@ViewBag.PostalCode" class="form-control" placeholder="Mã bưu điện" />
+                </div>
+
+                <button type="submit" class="btn btn-primary">
+                    <i class="fa fa-search"></i> Tìm kiếm
+                </button>
+          
+            </form>
+        </div>
 
         <div class="table-responsive mt-3">
             <table class="table table-striped">
@@ -91,4 +119,4 @@
         </div>
 
     </div>
-</div>
+</div> *@
