--- a/AdminWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -174,6 +174,10 @@
                                 </td>
                                 <td>
                                     <div class="btn-group" role="group">
+                                        <a asp-action="Details" asp-route-id="@item.ProductId" 
+                                           class="btn btn-sm btn-info" title="Xem chi tiết">
+                                            <i class="fa fa-eye"></i> Chi tiết
+                                        </a>
                                         <a asp-action="Edit" asp-route-id="@item.ProductId" 
                                            class="btn btn-sm btn-warning" title="Chỉnh sửa">
                                             <i class="fa fa-edit"></i> Sửa
