--- a/AdminWeb/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -1,4 +1,4 @@
-﻿
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -212,7 +212,7 @@
                     showMethod: 'slideDown',
                     timeOut: 4000
                 };
-                toastr.success('Responsive Admin Theme', 'Welcome to INSPINIA');
+                //toastr.success('Responsive Admin Theme', 'Welcome to INSPINIA');
 
             }, 1300);
 
